coroot/00-ns.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: coroot
  name: coroot
